--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,12 +4,7 @@ on:
   workflow_dispatch:
     
 env:
-  ROM_LINK: https://0yfk2-my.sharepoint.com/personal/dndghru_0yfk2_onmicrosoft_com/_layouts/15/download.aspx?SourceUrl=%2Fpersonal%2Fdndghru%5F0yfk2%5Fonmicrosoft%5Fcom%2FDocuments%2F%5BPOCO%20F4%5D%20EQE%20HelloUI%20%2D%20U2UMS34M%2E27%2D38%2D1%2D2%2Ezip
-  ROM_TYPE: Generic
-  BUILD_AB: true
-  BUILD_AONLY: false
-  ROM_AONLY: A.7z
-  ROM_AB: AB.7z
+    mkdir pixel
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,39 +19,17 @@ jobs:
             sudo -E apt-get -qq install git openjdk-8-jdk p7zip
        
        - name: Cloning repo...
-         run: git clone --recurse-submodules https://github.com/ping2109/ErfanGSIs-TrebleExp.git ErfanGSIs
+         run: git clone https://github.com/ponces/treble_build_pe -b thirteen
        
        - name: Installing requirements
          run: |
-              sudo chmod -R 777 ErfanGSIs
-              cd ErfanGSIs
-              sudo bash setup.sh
-       
-       - name: Downloading rom and building A Only GSI
-         if: env.BUILD_AONLY == 'true'
-         run: sudo ./ErfanGSIs/url2GSI.sh -a $ROM_LINK $ROM_TYPE -d
-       
-       - name: 7zipping Aonly GSI
-         if: env.BUILD_AONLY == 'true'
-         run: 7za a -t7z -r $ROM_AONLY ErfanGSIs/output/*
-       
-       - name: Uploading Aonly GSI
-         if: env.BUILD_AONLY == 'true'
-         run: |
-              curl -sL https://git.io/file-transfer | sh
-              ./transfer gof $ROM_AONLY
+              sudo chmod -R 777 Pixel
+              cd Pixel
+              sudo bash treble_build_pe/build.sh
            
        - name: Cleaning output
          if: env.BUILD_AB == 'true'
-         run: sudo rm -rf ErfanGSIs/output/*
-         
-       - name: Downloading rom and building A/B GSI
-         if: env.BUILD_AB == 'true'
-         run: sudo ./ErfanGSIs/url2GSI.sh -b $ROM_LINK $ROM_TYPE -d
-
-       - name: 7zipping AB GSI
-         if: env.BUILD_AB == 'true'
-         run: 7za a -t7z -r $ROM_AB ErfanGSIs/output/*
+         run: sudo rm -rf ErfanGSIs/output/
 
        - name: Uploading AB 
          if: env.BUILD_AB == 'true'
